--- a/myfood/templates/home/_posts.html
+++ b/myfood/templates/home/_posts.html
@@ -10,11 +10,13 @@
                     {{ post.body }}
                 {% endif %}
             </p>
+            {% if current_user.can(Permission.ADMINISTER) %}
             <div class="post-footer">
                 <a href="{{ url_for('home.edit', id=post.id) }}">
                     <span class="label label-primary">Edit</span>
                 </a>
             </div><br/><hr>
+            {% endif %}
         </ul>
         {% endfor %}
     </div>
