--- a/myfood/templates/layout.html
+++ b/myfood/templates/layout.html
@@ -23,6 +23,14 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Coming soon</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li><a href="#">{{ current_user.nickname }}</a></li>
+                <li><a href="{{ url_for('auth.logout') }}">Sign out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Sign in</a></li>
+                {% endif %}
+            </ul>
 
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
