--- a/myfood/templates/home/index.html
+++ b/myfood/templates/home/index.html
@@ -9,9 +9,11 @@
 
 {% block content %}
 <div class="col-sm-10 blog-main">
+    {% if current_user.can(Permission.ADMINISTER) %}
     <div class="blog-post">
         {{ wtf.quick_form(form) }}
     </div><hr>
+    {% endif %}
     {% include 'home/_posts.html' %}
 </div>
 {% endblock %}
