--- a/myfood/templates/home/post.html
+++ b/myfood/templates/home/post.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Post{% endblock %}
 
@@ -10,5 +11,24 @@
 {% block content %}
 <div class="col-sm-10 blog-main">
     {% include 'home/_posts.html' %}
+    <h4 id="comments">Comments</h4>
+    {% if current_user.can(Permission.COMMENT) %}
+    <div class="comment-form">
+        {{ wtf.quick_form(form) }}
+    </div>
+    {% endif %}
+    <ul class="comments">
+    {% for comment in comments %}
+    <li class="comment">
+        <div class="comment-content">
+            <div class="comment-date">{{ comment.timestamp }}</div>
+            <div class="comment-author">{{ comment.author.username }}</div>
+            <div class="comment-body">
+                {{ comment.body }}
+            </div>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
 </div>
 {% endblock %}
