--- a/myfood/templates/blog/edit_post.html
+++ b/myfood/templates/blog/edit_post.html
@@ -1,20 +1,19 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}Edit Post{% endblock %}
+
 {% block styles %}
     {{ super() }}
     <link href="static/css/blog.css" rel="stylesheet">
 {% endblock %}
 
 
-{% block content %}
+{% block page_content %}
 <div class="col-sm-10 blog-main">
-    {% if current_user.can(Permission.ADMINISTER) %}
     <div class="blog-post">
         {{ wtf.quick_form(form) }}
     </div><hr>
-    {% endif %}
-    {% include 'home/_posts.html' %}
 </div>
 {% endblock %}
 
