--- a/myfood/templates/layout.html
+++ b/myfood/templates/layout.html
@@ -14,12 +14,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('home.index') }}">MYSITE</a>
+            <a class="navbar-brand" href="{{ url_for('blog.index') }}">MYSITE</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#">Home</a></li>
-                <li><a href="{{ url_for('home.index') }}">Blog</a></li>
+                <li><a href="{{ url_for('blog.index') }}">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Coming soon</a></li>
             </ul>
@@ -37,6 +37,23 @@
 </nav>
 {% endblock %}
 
+{% block content %}
+<div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
 
+    {% block page_content %}{% endblock %}
+</div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_jquery() }}
+{{ moment.include_moment() }}
+{% endblock %}
 
 
