--- a/myfood/templates/auth/register.html
+++ b/myfood/templates/auth/register.html
@@ -3,7 +3,7 @@
 
 {% block title %}Register{% endblock %}
 
-{% block content %}
+{% block page_content %}
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <div class="page-header">
