--- a/myfood/templates/auth/login.html
+++ b/myfood/templates/auth/login.html
@@ -7,7 +7,7 @@
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <div class="page-header">
-    <h1>Log in</h1>
+    <h1>Sign in</h1>
     </div>
     {{ wtf.quick_form(form) }}
     <hr>
