--- a/myfood/templates/blog/index.html
+++ b/myfood/templates/blog/index.html
@@ -1,14 +1,9 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block styles %}
-    {{ super() }}
-    <link href="static/css/blog.css" rel="stylesheet">
-{% endblock %}
-
 
 {% block page_content %}
-<div class="col-sm-10 blog-main">
+<div>
     {% if current_user.can(Permission.ADMINISTER) %}
     <div class="blog-post">
         {{ wtf.quick_form(form) }}
