--- a/myfood/templates/blog/_posts.html
+++ b/myfood/templates/blog/_posts.html
@@ -1,18 +1,19 @@
 
         {% for post in posts %}
             <h1 class="blog-post-title"><a href="{{ url_for('blog.post', id=post.id) }}">{{ post.title }}</a></h1>
-            <div class="post-date">Published on {{ moment(post.timestamp).format('LLL') }}</div>
-            <div class="post-footer">
-                <span class="label label-primary">{{ post.comments.count() }} Comments</span>
+            <div class="post-date btn-lg">Published on {{ moment(post.timestamp).format('LLL') }}</div>
+                <span><a href="{{ url_for('blog.category', id=post.category.id) }}" class="btn btn-link btn-lg">Category: {{ post.category.categoryname }}</a></span>
+                <a href="{{ url_for('blog.post', id=post.id) }}" class="btn btn-link btn-lg">
+                    <span class="badge">{{ post.comments.count() }}</span> Comments
+                </a>
                 {% if current_user.can(Permission.ADMINISTER) %}
                 <a href="{{ url_for('blog.edit', id=post.id) }}">
-                    <span class="label label-primary">Edit</span>
+                    <span class="btn btn-default">Edit</span>
                 </a>
                 <a href="{{ url_for('blog.delete', id=post.id) }}">
-                    <span class="label label-primary">Delete</span>
+                    <span class="btn btn-default">Delete</span>
                 </a>
                 {% endif %}
-            </div>
 
             <p>
                 {% if post.body_html %}
