change the html slightly

--- a/myfood/templates/blog/category.html
+++ b/myfood/templates/blog/category.html
@@ -7,6 +7,22 @@
 
 {% block page_content %}
 <div>
-    {% include 'blog/_posts.html' %}
+    {% for post in posts %}
+            <h1 class="blog-post-title"><a href="{{ url_for('blog.post', id=post.id) }}">{{ post.title }}</a></h1>
+            <div class="post-date btn-lg">Published on {{ moment(post.timestamp).format('LLL') }}</div>
+                <span><a href="{{ url_for('blog.category', id=post.category.id) }}" class="btn btn-link btn-lg">Category: {{ post.category.categoryname }}</a></span>
+                <a href="{{ url_for('blog.post', id=post.id) }}" class="btn btn-link btn-lg">
+                    <span class="badge">{{ post.comments.count() }}</span> Comments
+                </a>
+                {% if current_user.can(Permission.ADMINISTER) %}
+                <a href="{{ url_for('blog.edit', id=post.id) }}">
+                    <span class="btn btn-default">Edit</span>
+                </a>
+                <a href="{{ url_for('blog.delete', id=post.id) }}">
+                    <span class="btn btn-default">Delete</span>
+                </a>
+                {% endif %}
+            <hr>
+        {% endfor %}
 </div>
 {% endblock %}
