--- a/myfood/templates/layout.html
+++ b/myfood/templates/layout.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('blog.index') }}">Blog</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="{{ url_for('blog.about') }}">About</a></li>
                 <li><a href="#">Coming soon</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
