modify templates slightly

--- a/myfood/templates/blog/category.html
+++ b/myfood/templates/blog/category.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 
-{% block title %}category.categoryname - post{% endblock %}
+{% block title %}MYSITE - {{ category.categoryname}}{% endblock %}
 
 
 
