--- a/myfood/templates/blog/post.html
+++ b/myfood/templates/blog/post.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Post{% endblock %}
+{% block title %}MYSITE - Post{% endblock %}
 
 
 
