--- a/myfood/templates/auth/login.html
+++ b/myfood/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Login{% endblock %}
+{% block title %}MYSITE - Sign in{% endblock %}
 
 {% block page_content %}
 <div class="col-md-4"></div>
